--- a/NewApp/NewsApp/pubspec.yaml
+++ b/NewApp/NewsApp/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   cached_network_image: ^2.3.1
   http: ^0.12.2
+  webview_flutter: ^0.3.22+1
 
 dev_dependencies:
   flutter_test:
